fix(details): scale images in similar properties section using object-fit cover and add overflow hidden

--- a/frontend/src/app/pages/details/details.component.scss
+++ b/frontend/src/app/pages/details/details.component.scss
@@ -510,8 +510,18 @@
   gap: 30px;
   
   .listing-card {
+    padding: 0 !important;
+    overflow: hidden;
+    
     .image-wrapper {
       height: 150px;
+      position: relative;
+      
+      .property-img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
   }
 
